fixed project card overlap

--- a/style.css
+++ b/style.css
@@ -240,8 +240,8 @@ h6 { font-size: 16px;}
 
 
 .skill-list{
-	
-	padding:10px;
+	padding-right:10px;
+	padding-left:0px;
 	width:100%;
 	overflow:scroll;
 }
@@ -271,6 +271,7 @@ h6 { font-size: 16px;}
 #projects{
 	background:#000 url(assets/stars.png) repeat top center;
 	z-index:0;
+	width:100%;
 	
 }
 
@@ -420,14 +421,36 @@ h1 {
 	margin-left: auto;
 	margin-right: auto;
 	margin-bottom: 20px;
-	-webkit-perspective: 2000px;
-	-moz-perspective: 2000px;
-	perspective: 2000px;
+	-webkit-perspective: 3000px;
+	-moz-perspective: 3000px;
+	perspective: 3000px;
 	cursor: pointer;
+}
 
 
 
-  }
+	.card{
+
+		width: 100%;
+		
+		}
+		
+		@media(max-width: 768px){
+		.card{
+		width: 10rem;
+		width: 100%;
+		height: 18rem;
+		}
+		}
+
+
+
+
+	
+
+
+
+  
  /*making images less blurry*/ 
 .img-responsive{
 	
@@ -436,8 +459,11 @@ h1 {
   
 
 
+  
+
 
   .card img {
+	
 	width: calc(330px - 10px);
 	height: calc(545px - 45px);
 	border-top-left-radius: 6px;
@@ -445,10 +471,21 @@ h1 {
 	border-style: solid;
 	border-color: rgba(0,0,0,0.16);
 	border-bottom-width: 1px;
-	
+	width:100%;
   
 
   }
+
+  @media(max-width: 768px){
+	.card img{
+	width: 10rem;
+	width: 100%;
+	height: 18rem;
+	}
+	}
+
+
+
  /*adding hover effect to cards*/  
   .card_front, .card_back {
 	position: absolute;
@@ -479,6 +516,7 @@ h1 {
  /*adding flip effect to cards*/ 
   .card_front {
 	background-color: white;
+	
   }
   
   .card_back {
